Update 'sx955h5tt-java-quarkus' component image to: artifactory-docker-artifactory-jcr.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/rhtap-qe-java-quarkus:70a87644ce12df83383824e8a720afa3283898cc@sha256:73b8aed4ebc75d3c2e9499b056ced03b8b0878cfa18acf5e840344e3e85eca3d

--- a/components/sx955h5tt-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/sx955h5tt-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: sx955h5tt-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: artifactory-docker-artifactory-jcr.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/rhtap-qe-java-quarkus:70a87644ce12df83383824e8a720afa3283898cc@sha256:73b8aed4ebc75d3c2e9499b056ced03b8b0878cfa18acf5e840344e3e85eca3d
+          name: container-image
